<resources>
    <string name="app_name">Ngelana</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="my_trips">My Trips</string>
    <string name="me">Me</string>
    <string name="tourist_attractions">Tourist Attractions</string>
    <string name="culinary_spot">Culinary Spot</string>
    <string name="lodging">Lodging</string>
    <string name="recommendation_place">Recommendation Place</string>
    <string name="customize_place">Customize Place</string>
    <string name="plan_result">Plan Result</string>
    <string name="personal_information">Personal Information</string>
    <string name="my_interest">My Interest</string>
    <string name="my_favorite">My Favorite</string>
    <string name="my_review">My Review</string>
    <string name="language">Language</string>
    <string name="help_center">Help Center</string>
    <string name="about_us">About Us</string>
    <string name="upcoming_trip">Upcoming Trip</string>
    <string name="canceled_trip">Canceled Trip</string>
    <string name="completed_trip">Completed Trip</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="empty_name">Please enter your name to proceed.</string>
    <string name="empty_email">Please enter your email address to proceed.</string>
    <string name="empty_password">Please enter your password to proceed.</string>
    <string name="empty_date">You need to select date first to proceed.</string>
    <string name="empty_place">You need to select at least one place before submitting.</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="save">Save</string>
    <string name="back_to_home">Back to Home</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="plan">Plan</string>
    <string name="location">Location</string>
    <string name="destinations">Destinations</string>
    <string name="home_title">Arrange Your %1$s!</string>
    <string name="home_description">Start planning your journey with Ngelana by clicking the image beside.</string>
    <string name="favorite_place">Find your favorite place</string>
    <string name="recommended_place_for_you">Recommended place for you</string>
    <string name="popular_places_in_bali">Popular places in Bali</string>
    <string name="tv_similar_place">You might also like these places</string>
    <string name="see_all">See all</string>
    <string name="bali_indonesia">Bali, Indonesia</string>
    <string name="choose_the_date">Choose the date for your trip!</string>
    <string name="date_description">Set a date for your trip to simplify your travel arrangements.</string>
    <string name="select_date">Select Date</string>
    <string name="add_place">Add place</string>
    <string name="start_destination">Start Destination</string>
    <string name="end_destination">End Destination</string>
    <string name="set_your_trip_name">Set Your Trip Name</string>
    <string name="enter_trip_name">Enter Trip Name</string>
    <string name="trip_name">Trip Name:</string>
    <string name="date">Date:</string>
    <string name="tourist_attractions_desc">Popular destinations like landmarks, historical sites, and natural attractions.</string>
    <string name="culinary_spot_desc">Places known for local dishes, street food, and unique dining experiences.</string>
    <string name="lodging_desc">Accommodation options such as hotels, hostels, and resorts.</string>
    <string name="completed">Completed</string>
    <string name="q_completed">Have you finished your journey?</string>
    <string name="write_a_review">Write a review..</string>
    <string name="already_review">You\'ve already left a review for this place.</string>
    <string name="cancel_the_trip">Cancel the Trip</string>
    <string name="start_plan_completed_button">Plan Your Next Trip</string>
    <string name="start_plan_canceled_button">Plan a New Trip</string>
    <string name="trip_cancel_success">Trip successfully canceled!</string>
    <string name="trip_cancel_failed">Failed to cancel trip.</string>
    <string name="cancel_trip_confirmation_message">Are you sure you want to cancel this trip?</string>
    <string name="welcome">Welcome,</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="edit">Edit</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="phone_number">Phone Number</string>
    <string name="joined_at">Joined At</string>
    <string name="set_my_name">Set my name</string>
    <string name="set_my_date_of_birth">Set my date of birth</string>
    <string name="set_my_gender">Set my gender</string>
    <string name="set_my_phone_number">Set my phone number</string>
    <string name="set_my_email">Set my email</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="user_updated_successfully">User updated successfully!</string>
    <string name="failed_to_update_user">Failed to update user: %1$s</string>
    <string name="add_interest">Add Interest</string>
    <string name="add_favorite">Add to Favorite</string>
    <string name="help_topics">Help Topics</string>
    <string name="can_t_find_what_you_re_looking_for">Can\'t find what you\'re looking for?</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us_description">
        Ngelana is an innovative mobile application designed to enhance the travel experience
        by providing location information at tourist attractions for users. The app aims to solve
        the common issue of overcrowded destinations, where it can lead not just the schedule
        to be messy, but it can make users be disappointed and frustrated. Utilizing machine
        learning to make user-generated data algorithms, Ngelana can make predictions about
        potential tourist destinations based on the user’s current location and interest.
        With that, users can make decisions more precisely and optimize their time in traveling.
    </string>
    <string name="onboarding">Create an Account</string>
    <string name="login_title">Welcome Back to %1$s!</string>
    <string name="login_description">Log in to Ngelana and pick up where you left off on your unique journey.</string>
    <string name="login_button_from_register">Already have an account? %1$s here.</string>
    <string name="login_here">Log in</string>
    <string name="register_title">Join %1$s and Begin Your Journey!</string>
    <string name="register_description">Your personal adventure awaits! Sign up on Ngelana and discover the wonders of the world.</string>
    <string name="register_button_from_login">Don\'t have an account yet? %1$s here.</string>
    <string name="sign_up_here">Sign up</string>
    <string name="back">Back</string>
    <string name="_0">(0)</string>
    <string name="_5_0">5.0</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="what_s_your_email">What\'s your email?</string>
    <string name="set_your_password">Set your password!</string>
    <string name="signup_title">Join Ngelana and Begin Your Journey!</string>
    <string name="signup_description">Your personal adventure awaits! Sign up on Ngelana and discover the wonders of the world.</string>
    <string name="recommendation_title">Explore Beyond Boundaries with Ngelana\'s Recommendations</string>
    <string name="recommendation_description">Let Ngelana guide you beyond boundaries. Uncover new destinations, immerse yourself in diverse cultures, and embark on a journey of discovery.</string>
    <string name="customize_description">Customize your travel plans effortlessly with Ngelana\'s user-friendly destination planner. Plan your trip, add favorite spots, and enjoy seamless travel arrangements.</string>
    <string name="customize_title">Effortless Customization: Ngelana\'s Easy-to-Use Destination Planner</string>
    <string name="interest">Interest</string>
    <string name="interest_title">Discover Your Perfect Recommendations!</string>
    <string name="interest_description">Please select your interests below. We will use this information to personalize recommendations that best match your preferences and needs.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="successfully_saved_preferences">Successfully saved preferences.</string>
    <string name="failed_to_save_preferences">Please select at least 3 interests</string>
    <string name="tab_text_1">Upcoming</string>
    <string name="tab_text_2">Completed</string>
    <string name="tab_text_3">Canceled</string>
    <string name="register_success">Congratulations! Your account has been successfully created.</string>
    <string name="register_message">You can now log in and start exploring our platform. \n Press \'Continue\' to proceed to the log in page.</string>
    <string name="successfully_logged_in">You\'ve successfully logged in. Welcome back!</string>
    <string name="successfully_logged_out">You have successfully logged out. See you later!</string>
    <string name="permission_request_granted">Permission request granted.</string>
    <string name="successfully_take_pictures">Successfully take pictures.</string>
    <string name="not_available">Not available.</string>
    <string name="failed_to_load_data">Failed to load data.</string>
    <string name="permission_request_denied">Permission request denied.</string>
    <string name="invalid_email_format">Invalid email format.</string>
    <string name="passwords_must_have_at_least_8_characters">Passwords must have at least 8 characters.</string>
    <string name="enable_location_first">Please enable location first to proceed</string>
    <string name="location_not_found">Location is not found. Try Again</string>
    <string name="no_data_available">No data available.</string>
    <string name="unknown">Unknown</string>
    <string name="continue_to_the_next_page">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="custom_alert_dialog_message">This is a custom alert dialog message.</string>
    <string name="title_of_custom_alert_dialog">Title</string>
    <string name="success_completed_title">You\'re all set!</string>
    <string name="registration_completed_message">You have successfully created your account. Click the continue button to log in.</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="login_success_title">Success!</string>
    <string name="login_success_message">You have successfully logged in. Click the continue button to proceed.</string>
    <string name="login_success_interest_message">One more step to complete. Click the continue button to proceed.</string>
    <string name="login_failed">Login Failed</string>
    <string name="plan_creation_success_message">Your travel plan has been successfully created.</string>
    <string name="plan_creation_failed">Failed to Create Plan</string>
    <string name="sign_out_confirmation_message">Are you sure you want to sign out?</string>
    <string name="delete_account_confirmation_message">Are you sure you want to delete your account?</string>
    <string name="delete_account">Delete Account</string>
    <string name="ic_preference">https://storage.googleapis.com/ngelana-bucket/ngelana-assets/icon_ngelana_black.svg</string>
</resources>