<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/explore"/>

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/ic_route"
        android:title="@string/app_name"/>

    <item
        android:id="@+id/navigation_trip"
        android:icon="@drawable/ic_home_repair_service"
        android:title="@string/my_trips"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/me"/>

</menu>