<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstonehore.ngelana.view.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_explore"
            app:destination="@id/navigation_explore"
            />
        <action
            android:id="@+id/action_navigation_home_to_navigation_plan"
            app:destination="@id/navigation_plan" />
    </fragment>

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.capstonehore.ngelana.view.explore.ExploreFragment"
        android:label="@string/explore"
        tools:layout="@layout/fragment_explore" >
        <action
            android:id="@+id/action_navigation_explore_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_plan"
        android:name="com.capstonehore.ngelana.view.home.plan.PlanFragment"
        android:label="@string/plan"
        tools:layout="@layout/fragment_plan" >
        <action
            android:id="@+id/action_navigation_plan_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_trip"
        android:name="com.capstonehore.ngelana.view.mytrip.MyTripFragment"
        android:label="@string/my_trips"
        tools:layout="@layout/fragment_my_trip" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstonehore.ngelana.view.profile.ProfileFragment"
        android:label="@string/me"
        tools:layout="@layout/fragment_profile" />

</navigation>